--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -31,11 +31,25 @@ input {
 button {
     width: 365px;
     margin-top: 10px;
-    height: 30px;
+    font-size: 20px;
+    font-family: 'Times New Roman', Times, serif;
+    height: 40px;
     background-color: rgb(255, 208, 0);
 }
 h3 {
     color: white;
     text-align: center;
     font-size: 1.5rem;
+}
+.register {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.register a {
+    color:rgb(255, 208, 0);
+    text-decoration: underline;
+    padding-left: 5px;
 }
