--- a/src/components/Auth/auth.css
+++ b/src/components/Auth/auth.css
@@ -36,6 +36,9 @@ button {
     height: 40px;
     background-color: rgb(255, 208, 0);
 }
+button:hover {
+    cursor: pointer;
+}
 h3 {
     color: white;
     text-align: center;
@@ -52,4 +55,7 @@ h3 {
     color:rgb(255, 208, 0);
     text-decoration: underline;
     padding-left: 5px;
+}
+.passwordInput {
+    color: white;
 }
