header functionality complete

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -35,3 +35,12 @@ a {
 .text {
     color:white;
 }
+.logoutButton {
+    width: 100px;
+    height: fit-content;
+    margin-left: 10px;
+}
+.userText {
+    color: red;
+    margin-left: 5px;
+}
